Revert "Fixing alignment issue with search button"
This reverts commit 1f9dad3b1760172bfdc3373101751cea729d23a3.

--- a/themes/bc/static/css/refresh.css
+++ b/themes/bc/static/css/refresh.css
@@ -266,7 +266,6 @@ body {
 #search-panel input.form-control, #search-panel button.btn.btn-default  {
     height: 50px;
     font-size: 20px;
-    margin-top: -1px; /* fixes alignment issue in Firefox */
 }
 
 
